updated delivery 3 and 4

--- a/notebooks/Covid_Dashboard.ipynb
+++ b/notebooks/Covid_Dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'Your base path is at: eds_covid-19'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error : b'From https://github.com/CSSEGISandDATA/COVID-19\\n   24587a0b6f..20264e86b7  web-data   -> origin/web-data\\n'\n",
-      "out : b'Already up to date.\\n'\n",
+      "Error : b'From https://github.com/CSSEGISandDATA/COVID-19\\n   f74f8d0cf5..9bca47c5ad  master     -> origin/master\\n * [new branch]            automated-patch-for-delayed-data-for-Peru-Thailand-07-28-2022 -> origin/automated-patch-for-delayed-data-for-Peru-Thailand-07-28-2022\\n   0ae1622021..955374592b  web-data   -> origin/web-data\\n'\n",
+      "out : b'Updating f74f8d0cf5..9bca47c5ad\\nFast-forward\\n csse_covid_19_data/csse_covid_19_daily_reports/07-28-2022.csv         | 4 ++--\\n .../time_series_covid19_confirmed_global.csv                          | 4 ++--\\n .../csse_covid_19_time_series/time_series_covid19_deaths_global.csv   | 4 ++--\\n 3 files changed, 6 insertions(+), 6 deletions(-)\\n'\n",
       " Number of regions rows: 411\n"
      ]
     }
@@ -94,15 +94,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Number of rows stored: 261630\n",
-      " Latest date is: 2022-07-27 00:00:00\n"
+      " Number of rows stored: 261915\n",
+      " Latest date is: 2022-07-28 00:00:00\n"
      ]
     }
    ],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -159,18 +159,18 @@
      "text": [
       "the test slope is: [2.]\n",
       "             date state  country   confirmed  confirmed_filtered  \\\n",
-      "141367 2022-07-23    no  Germany  30331133.0          30341824.8   \n",
-      "141368 2022-07-24    no  Germany  30331133.0          30413677.4   \n",
-      "141369 2022-07-25    no  Germany  30476605.0          30487953.4   \n",
-      "141370 2022-07-26    no  Germany  30598385.0          30588954.2   \n",
-      "141371 2022-07-27    no  Germany  30702511.0          30689955.0   \n",
+      "141521 2022-07-24    no  Germany  30331133.0          30413677.4   \n",
+      "141522 2022-07-25    no  Germany  30476605.0          30487953.4   \n",
+      "141523 2022-07-26    no  Germany  30598385.0          30579188.6   \n",
+      "141524 2022-07-27    no  Germany  30702511.0          30693014.4   \n",
+      "141525 2022-07-28    no  Germany  30787309.0          30806840.2   \n",
       "\n",
       "        confirmed_DR  confirmed_filtered_DR  \n",
-      "141367  6.586269e+02             444.049693  \n",
-      "141368  3.033113e+07             430.659422  \n",
-      "141369  4.176697e+02             416.270124  \n",
-      "141370  2.280148e+02             347.985149  \n",
-      "141371  2.708427e+02             302.858534  \n"
+      "141521  3.033113e+07             430.659422  \n",
+      "141522  4.176697e+02             416.270124  \n",
+      "141523  2.280148e+02             368.477861  \n",
+      "141524  2.708427e+02             298.318245  \n",
+      "141525  3.249568e+02             269.649011  \n"
      ]
     }
    ],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -353,8 +353,6 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\ROHITH  BATTHINENI\\eds_covid-19\n",
-      "Dash is running on http://127.0.0.1:8050/\n",
-      "\n",
       "Dash is running on http://127.0.0.1:8050/\n",
       "\n",
       "Dash is running on http://127.0.0.1:8050/\n",
